--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js -e js,hbs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
+    
   },
   "keywords": [],
   "author": "",
